--- a/module_login/src/main/res/values/strings.xml
+++ b/module_login/src/main/res/values/strings.xml
@@ -13,4 +13,6 @@
     <string name="login_failed">"Login failed"</string>
     <string name="invalid_username">Not a valid username</string>
     <string name="invalid_code">Code must be >0 characters</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
